[package]
name = "bodyfile"
version = "0.1.4"
edition = "2018"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
description = "Parser and Generator for the famous mactime bodyfile format"
homepage = "https://www.github.com/janstarke/bodyfile"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duplicate = "0.3"

[dev-dependencies]
matches = "0.1"
